--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <span></span>
         </div>
         <div class="carrito-icono" id="carritoIcono">
-            <img src="../assets/3144456.png" alt="Carrito">
+            <img src="./assets/3144456.png" alt="Carrito">
         </div>
     </header>
     
@@ -30,7 +30,5 @@
         <div id="totalCarrito">Total: $0.00</div>
         <button id="realizarCompra">Realizar Compra</button>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
