--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de Ropa</title>
-    <link rel="stylesheet" href="./style/style.css">
-    <script src="./view/codigo.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../view/codigo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <span></span>
         </div>
         <div class="carrito-icono" id="carritoIcono">
-            <img src="./assets/3144456.png" alt="Carrito">
+            <img src="../assets/3144456.png" alt="Carrito">
         </div>
     </header>
     
