agregamos sweet alert pidiendo datos al realizar la compra

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <span></span>
             <span></span>
         </div>
+        <div><h1>tienda de ropa</h1></div>
         <div class="carrito-icono" id="carritoIcono">
             <img src="./assets/3144456.png" alt="Carrito">
         </div>
